Add profile and fan profile functionality fixes.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,6 +22,8 @@
         "true": true,
         "journalctl": true,
         "busctl": true,
-        "/home/erhan/tmp/src/ucc/bin/ucc-gui": true
+        "/home/erhan/tmp/src/ucc/bin/ucc-gui": true,
+        "make": true,
+        "./build-local.sh": true
     }
 }
