--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -31,6 +31,7 @@
         "ldd": true,
         "quit": true,
         "n": true,
-        "y": true
+        "y": true,
+        "ninja": true
     }
 }
