refactor: rename tccd-ng daemon to uccd and update references
Moves src/tccd-ng to src/uccd and renames executable target to 'uccd'.\nUpdates CMakeLists, VSCode tasks/launch, tests, docs, and UCC client references to reflect the new daemon name.\nBuild confirmed successful locally (warnings only).

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -38,10 +38,10 @@
             "internalConsoleOptions": "openOnSessionStart"
         },
         {
-            "name": "tccd-ng (C++)",
+            "name": "uccd (C++)",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceRoot}/build/tccd-ng",
+            "program": "${workspaceRoot}/build/uccd",
             "args": [],
             "stopAtEntry": false,
             "cwd": "${workspaceRoot}/build",
@@ -55,7 +55,7 @@
                     "ignoreFailures": true
                 }
             ],
-            "preLaunchTask": "build-tccd-ng",
+            "preLaunchTask": "build-uccd",
             "sourceLanguages": ["cpp"]
         }
     ]
