--- a/src/dist-data/com.uniwill.uccd.conf
+++ b/src/dist-data/com.uniwill.uccd.conf
@@ -4,12 +4,12 @@
 <busconfig>
         <type>system</type>
         <policy user="root">
-                <allow own="com.tuxedocomputers.tccd" />
-                <allow send_destination="com.tuxedocomputers.tccd" />
-                <allow receive_sender="com.tuxedocomputers.tccd" />
+                <allow own="com.uniwill.uccd" />
+                <allow send_destination="com.uniwill.uccd" />
+                <allow receive_sender="com.uniwill.uccd" />
         </policy>
         <policy context="default">
-                <allow send_destination="com.tuxedocomputers.tccd" />
-                <allow receive_sender="com.tuxedocomputers.tccd" />
+                <allow send_destination="com.uniwill.uccd" />
+                <allow receive_sender="com.uniwill.uccd" />
         </policy>
 </busconfig>
