Refactor dashboard functionality into separate DashboardTab class
- Create DashboardTab.hpp and DashboardTab.cpp
- Move dashboard UI setup and monitoring slots from MainWindow
- Update MainWindow to use DashboardTab instance
- Update CMakeLists.txt to include new files

--- a/src/ucc/ucc-gui/CMakeLists.txt
+++ b/src/ucc/ucc-gui/CMakeLists.txt
@@ -28,6 +28,7 @@ find_package( Qt6 REQUIRED COMPONENTS
 add_executable( ucc-gui
   main.cpp
   MainWindow.cpp
+  DashboardTab.cpp
   KeyboardTab.cpp
   ProfileManager.cpp
   SystemMonitor.cpp
