Implement CPU governor selection feature
- Replace checkbox with combo box for CPU governor selection
- Add GetAvailableGovernors DBus method to query available governors from hardware
- Update profile system to use 'governor' field instead of 'useMaxPerfGov' boolean
- Maintain backward compatibility with old profile format
- Add dynamic governor list population with fallback to common governors
- Test governor changes work correctly on system level

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -64,7 +64,9 @@
       },
       "qdbus6": true,
       "setxkbmap": true,
-      "localectl": true
+      "localectl": true,
+      "lscpu": true,
+      "rpm": true
     },
     "editor.fontFamily": "'Source Code Pro', Menlo, Monaco, 'Courier New', monospace",
     "editor.fontSize": 14,
