Implement HardwareTab with display brightness, webcam, and Fn lock controls
- Create HardwareTab class to encapsulate hardware controls functionality
- Move hardware controls from MainWindow to separate HardwareTab
- Implement display brightness slider control
- Implement webcam enable/disable toggle
- Implement Fn lock enable/disable toggle
- Update MainWindow to use HardwareTab with SystemMonitor integration
- Update CMakeLists.txt to include new HardwareTab files

--- a/src/ucc/ucc-gui/CMakeLists.txt
+++ b/src/ucc/ucc-gui/CMakeLists.txt
@@ -29,11 +29,13 @@ add_executable( ucc-gui
   main.cpp
   MainWindow.cpp
   DashboardTab.cpp
+  HardwareTab.cpp
   KeyboardTab.cpp
   ProfileManager.cpp
   SystemMonitor.cpp
   FanCurveEditorWidget.cpp
   FanCurveEditorWidget.hpp
+  HardwareTab.hpp
   KeyboardVisualizerWidget.cpp
   KeyboardVisualizerWidget.hpp
   DetectLayout.cpp
